--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-MT">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>ExaClicks</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Advanced SEO, Web design and Digital Marketing Services in Malta</title>
+  <meta content="Advanced SEO and Digital Marketing services from web design to first page on google in Malta with success guaranteed by highly skilled digital nomads" name="description">
+  <meta name="google-site-verification" content="4yNNxf8960AQ0bbxS_iGBCGYrquvunrWuNcnrSW-R8s" />
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -35,8 +35,6 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-     <!-- <h1 class="logo"><a href="index.html">ExaClicks</a></h1>-->
-      <!-- Uncomment below if you prefer to use an image logo -->
       <a href="index.html" class="logo"><img  style="max-height: 70px;" src="assets/img/favicon.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
@@ -59,12 +57,12 @@
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>Full Service Digital Marketing</h1>
-          <h2>ExaClicks provides a one-stop shop for online marketing and advertising services from SEO to PPC
-          </h2>
+          <p>ExaClicks provides a one-stop shop for online marketing and advertising services from SEO to PPC
+          </p>
          
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
-          <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
+          <img src="assets/img/hero-img.png" class="img-fluid " alt="">
         </div>
       </div>
     </div>
@@ -81,8 +79,8 @@
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-laptop"></i></div>
-              <h4 class="title"><a href="">Brand Design & Strategy
-              </a></h4>
+              <h3 class="title">Brand Design & Strategy
+              </h3>
               <p class="description">
                 Everything that is around us, is designed for solutions. The goal for every designer is to have influence over all users. The outcome depends on the designer’s work</p>
             </div>
@@ -90,8 +88,8 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
-              <h4 class="title"><a href="">Social Media Management
-              </a></h4>
+              <h3 class="title">Social Media Management
+              </h3>
               <p class="description">With our custom social media marketing service plan, your business can start building brand awareness, as well as generating revenue from all social media platforms
 
               </p>
@@ -100,7 +98,7 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-clipboard-data"></i></div>
-              <h4 class="title"><a href="">SEO</a></h4>
+              <h3 class="title">SEO</h3>
               <p class="description">ExaClicks can help increase your bottom line with an SEO campaign that is specifically designed for your unique business. Start earning more qualified search traffic to your website today.</p>
             </div>
           </div>
@@ -173,16 +171,16 @@
       <div class="container">
 
         <div class="section-title">
-          <span>Services</span>
-          <h2>Services</h2>
+          <span>SEO Services</span>
+          <h2>SEO Services</h2>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Brand Design & Strategy
-              </a></h4>
+              <h3>Brand Design & Strategy
+              </h3>
               <p>Everything that is around us, is designed for solutions. The goal for every designer is to have influence over all users. The outcome depends on the designer’s work</p>
             </div>
           </div>
@@ -190,8 +188,8 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Social Media Management
-              </a></h4>
+              <h3>Social Media Management
+              </h3>
               <p>With our custom social media marketing service plan, your business can start building brand awareness, as well as generating revenue from all social media platforms
 
               </p>
@@ -201,7 +199,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">SEO</a></h4>
+              <h3>SEO</h3>
               <p>ExaClicks can help increase your bottom line with an SEO campaign that is specifically designed for your unique business. Start earning more qualified search traffic to your website today.</p>
             </div>
           </div>
@@ -209,7 +207,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="">Copywriting</a></h4>
+              <h3>Copywriting</h3>
               <p>The in-house copywriters and editors at ExaClicks work alongside the marketing team to strategically write branded website copy aimed to both capture your customers and increase search engine rankings
 
               </p>
@@ -219,8 +217,8 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="">Email Marketing
-              </a></h4>
+              <h3>Email Marketing
+              </h3>
               <p>Our email marketing management services include content creation and personalization, and we’ll help you choose the campaign package that fits your business needs and goals best.</p>
             </div>
           </div>
@@ -228,8 +226,8 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="">Website Development
-              </a></h4>
+              <h3>Website Development
+              </h3>
               <p>We create innovative, effective websites that capture your brand, improve your conversion rates, and maximize your revenue to help grow your business and achieve your goals
 
               </p>
