--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>ExaClicks</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>ExaClicks</span> </strong> 2019 All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
