--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo"><img  style="max-height: 70px;" src="assets/img/favicon.png" alt="" class="img-fluid"></a>
+      <a href="/" class="logo"><img  style="max-height: 70px;" src="assets/img/favicon.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
