--- a/index.html
+++ b/index.html
@@ -4,32 +4,77 @@
 <head>
 
 
-  <!-- Template Main JS File -->
-  <script async src="assets/js/main.js" defer></script>
+  <script async src="assets/js/main.js"></script>
+  <link rel="amphtml" href="https://exaclicks.com/">
 
-
-<link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null; this.rel='stylesheet'"> 
-<noscript><link rel="stylesheet" href="assets/css/style.css"></noscript> 
-<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-<link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-
+   <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
 
 
 
-<meta charset="utf-8">
-<meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Advanced SEO, Web design and Digital Marketing Services in Malta</title>
   <meta content="Advanced SEO and Digital Marketing services from web design to first page on google in Malta with success guaranteed by highly skilled digital nomads" name="description">
   <meta name="google-site-verification" content="4yNNxf8960AQ0bbxS_iGBCGYrquvunrWuNcnrSW-R8s" />
 
-  <!-- Favicons -->
+  
   <link href="assets/img/favicon.webp" rel="icon">
   <link href="assets/img/apple-touch-icon.webp" rel="apple-touch-icon">
 
+  
+  <script type="application/ld+json">
+    {
+     "@context": "https://schema.org",
+     "@type": "ProfessionalService",
+     "name": "ExaClicks Ltd",
+     "image": "https://exaclicks.com/assets/img/logo.webp",
+     "@id": "https://exaclicks.com",
+     "url": "https://exaclicks.com",
+     "address": {
+       "@type": "PostalAddress",
+       "streetAddress": "Sterling Building, Enrico Mizzi Street",
+       "addressLocality": "Ta’ Xbiex",
+       "postalCode": "XBX1453",
+       "addressCountry": "MT",
+       "name":"ExaClicks: Helps Your Business to Succeed Online Marketing!",
+       "description":"Advanced: Online SEO Marketing techniques that makes you achive your digital marketing targets.",
+       "inLanguage":"en",
+           "review": {
+           "@type": "Review",
+           "reviewRating": {
+             "@type": "Rating",
+             "ratingValue": "5",
+             "bestRating": "5",
+     "geo": {
+       "@type": "GeoCoordinates",
+       "latitude": 35.89914479999999,
+       "longitude": 14.4963519
+     },
+     "openingHoursSpecification": {
+       "@type": "OpeningHoursSpecification",
+       "dayOfWeek": [
+         "Monday",
+         "Tuesday",
+         "Wednesday",
+         "Thursday",
+         "Friday",
+         "Saturday",
+         "Sunday"
+       ],
+       "opens": "00:00",
+       "closes": "23:59"
+     },
+     "sameAs": [
+       "https://twitter.com/exaclicks",
+       "https://www.instagram.com/exa.clicks/",
+       "https://www.facebook.com/EXACLICKS/"
+     ],
+    }
+    </script>
 
-
-  <!-- Template Main CSS File -->
 
 
 </head>
@@ -39,7 +84,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
-      <a href="/" class="logo"><img  style="max-height: 70px;" src="assets/img/favicon.webp" width="175" height="75" ></a>
+      <a href="/" class="logo"><img  style="max-height: 70px;" src="assets/img/logo.webp" width="175" height="75" ></a>
 
 <!--
       <nav id="navbar" class="navbar">
