--- a/amp.html
+++ b/amp.html
@@ -25,56 +25,55 @@
 
  
 
+  
   <script type="application/ld+json">
     {
-
-    "@context": "https://schema.org",
-        "@type": "ProfessionalService",
-        "name": "ExaClicks Ltd",
-        "image": "https://exaclicks.com/assets/img/logo.webp",
-        "@id": "https://exaclicks.com",
-        "url": "https://exaclicks.com",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "Sterling Building, Enrico Mizzi Street",
-          "addressLocality": "Ta’ Xbiex",
-          "postalCode": "XBX1453",
-          "addressCountry": "MT",
-          "name":"ExaClicks: Helps Your Business to Succeed Online Marketing!",
-          "description":"Advanced: Online SEO Marketing techniques that makes you achive your digital marketing targets.",
-          "inLanguage":"en",
-              "review": {
-              "@type": "Review",
-              "reviewRating": {
-                "@type": "Rating",
-                "ratingValue": "5",
-                "bestRating": "5",
-        "geo": {
-          "@type": "GeoCoordinates",
-          "latitude": 35.89914479999999,
-          "longitude": 14.4963519
-        },
-        "openingHoursSpecification": {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": [
-            "Monday",
-            "Tuesday",
-            "Wednesday",
-            "Thursday",
-            "Friday",
-            "Saturday",
-            "Sunday"
-          ],
-          "opens": "00:00",
-          "closes": "23:59"
-        },
-        "sameAs": [
-          "https://twitter.com/exaclicks",
-          "https://www.instagram.com/exa.clicks/",
-          "https://www.facebook.com/EXACLICKS/"
-        ],
-       }
-   </script>
+     "@context": "https://schema.org",
+     "@type": "ProfessionalService",
+     "name": "ExaClicks Ltd",
+     "telephone": "+356 99721606",
+     "image": "https://exaclicks.com/assets/img/logo.webp",
+     "@id": "https://exaclicks.com",
+     "url": "https://exaclicks.com",
+      "geo": {
+       "@type": "GeoCoordinates",
+       "latitude": 35.89914479999999,
+       "longitude": 14.4963519
+       },
+     "address": {
+       "@type": "PostalAddress",
+       "streetAddress": "Sterling Building, Enrico Mizzi Street",
+       "addressLocality": "Ta’ Xbiex",
+       "postalCode": "XBX1453",
+       "addressCountry": "MT",
+       "name":"ExaClicks: Helps Your Business to Succeed Online Marketing!",
+       "description":"Advanced: Online SEO Marketing techniques that makes you achive your digital marketing targets."
+          
+             }
+   
+     },
+     "openingHoursSpecification": {
+       "@type": "OpeningHoursSpecification",
+       "dayOfWeek": [
+         "Monday",
+         "Tuesday",
+         "Wednesday",
+         "Thursday",
+         "Friday",
+         "Saturday",
+         "Sunday"
+       ],
+       "opens": "00:00",
+       "closes": "23:59"
+     },
+      
+     "sameAs": [
+       "https://twitter.com/exaclicks",
+       "https://www.instagram.com/exa.clicks/",
+       "https://www.facebook.com/EXACLICKS/"
+     ]
+    }
+    </script>
   
 
 
