--- a/index.html
+++ b/index.html
@@ -25,14 +25,21 @@
   <link href="assets/img/apple-touch-icon.webp" rel="apple-touch-icon">
 
   
+ 
   <script type="application/ld+json">
     {
      "@context": "https://schema.org",
      "@type": "ProfessionalService",
      "name": "ExaClicks Ltd",
+     "telephone": "+356 99721606",
      "image": "https://exaclicks.com/assets/img/logo.webp",
      "@id": "https://exaclicks.com",
      "url": "https://exaclicks.com",
+      "geo": {
+       "@type": "GeoCoordinates",
+       "latitude": 35.89914479999999,
+       "longitude": 14.4963519
+       },
      "address": {
        "@type": "PostalAddress",
        "streetAddress": "Sterling Building, Enrico Mizzi Street",
@@ -40,18 +47,10 @@
        "postalCode": "XBX1453",
        "addressCountry": "MT",
        "name":"ExaClicks: Helps Your Business to Succeed Online Marketing!",
-       "description":"Advanced: Online SEO Marketing techniques that makes you achive your digital marketing targets.",
-       "inLanguage":"en",
-           "review": {
-           "@type": "Review",
-           "reviewRating": {
-             "@type": "Rating",
-             "ratingValue": "5",
-             "bestRating": "5",
-     "geo": {
-       "@type": "GeoCoordinates",
-       "latitude": 35.89914479999999,
-       "longitude": 14.4963519
+       "description":"Advanced: Online SEO Marketing techniques that makes you achive your digital marketing targets."
+          
+             }
+   
      },
      "openingHoursSpecification": {
        "@type": "OpeningHoursSpecification",
@@ -67,13 +66,15 @@
        "opens": "00:00",
        "closes": "23:59"
      },
+      
      "sameAs": [
        "https://twitter.com/exaclicks",
        "https://www.instagram.com/exa.clicks/",
        "https://www.facebook.com/EXACLICKS/"
-     ],
+     ]
     }
     </script>
+  
 
 
 
