--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="container">
       <div class="row">
         <div id="maintext" class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1>Full Service Digital Marketing</h1>
+          <h1>Full Service Digital Marketing Malta</h1>
           <p>ExaClicks provides a one-stop shop for online marketing and advertising services from SEO to PPC
           </p>
          
