--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h3>Email Marketing
+              <h3>E-mail Marketing
               </h3>
               <p>Our email marketing management services include content creation and personalization, and we’ll help you choose the campaign package that fits your business needs and goals best.</p>
             </div>
