--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 
 
   <script async src="assets/js/main.js"></script>
-  <link rel="amphtml" href="https://exaclicks.com/">
 
-   <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -15,24 +14,29 @@
 
 
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Advanced SEO, Web design and Digital Marketing Services in Malta</title>
-  <meta content="Advanced SEO and Digital Marketing services from web design to first page on google in Malta with success guaranteed by highly skilled digital nomads" name="description">
+  <meta
+    content="Advanced SEO and Digital Marketing services from web design to first page on google in Malta with success guaranteed by highly skilled digital nomads"
+    name="description">
+  <meta name="keywords" content="Malta SEO, Digital Marketing, Maltese Local SEO">
   <meta name="google-site-verification" content="4yNNxf8960AQ0bbxS_iGBCGYrquvunrWuNcnrSW-R8s" />
 
-  
-  <link href="assets/img/favicon.webp" rel="icon">
-  <link href="assets/img/apple-touch-icon.webp" rel="apple-touch-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#16df7e">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#ffffff">
 
-  
- 
   <script type="application/ld+json">
     {
      "@context": "https://schema.org",
      "@type": "ProfessionalService",
      "name": "ExaClicks Ltd",
      "telephone": "+356 99721606",
-     "image": "https://exaclicks.com/assets/img/logo.webp",
+     "image": "https://exaclicks.com/assets/img/ExaClicks-Advaced-Digital-Marketing-logo.webp",
      "@id": "https://exaclicks.com",
      "url": "https://exaclicks.com",
       "geo": {
@@ -74,10 +78,25 @@
      ]
     }
     </script>
-  
 
 
 
+  <style>
+    .section-title h3 {
+      font-size: 32px;
+      font-weight: 700;
+      text-transform: uppercase;
+      margin-bottom: 20px;
+      padding-bottom: 0;
+      color: #5f687b;
+      position: relative;
+      z-index: 2
+    }
+
+    #hero {
+      height: 50vh;
+    }
+  </style>
 </head>
 
 <body>
@@ -85,9 +104,10 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
-      <a href="/" class="logo"><img  style="max-height: 70px;" src="assets/img/logo.webp" width="175" height="75" ></a>
+      <a href="/" class="logo" aria-label="ExaClicks"><img style="max-height: 77px;"
+          src="assets/img/ExaClicks-Advaced-Digital-Marketing-logo.webp" width="175" height="77" alt="ExaClicks"></a>
 
-<!--
+      <!--
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
@@ -110,10 +130,10 @@
           <h1>Full Service Digital Marketing Malta</h1>
           <p>ExaClicks provides a one-stop shop for online marketing and advertising services from SEO to PPC
           </p>
-         
+
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
-          <img src="assets/img/hero-img.webp" class="img-fluid" alt="" height="125" width="500">
+          <img src="assets/img/hero-img.webp" class="img-fluid" alt="Digital Marketing" height="125" width="500">
         </div>
       </div>
     </div>
@@ -130,18 +150,18 @@
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-laptop"></i></div>
-              <h3 class="title">Brand Design & Strategy
-              </h3>
+              <h2 class="title">Brand Design & Strategy</h2>
               <p class="description">
-                Everything that is around us, is designed for solutions. The goal for every designer is to have influence over all users. The outcome depends on the designer’s work</p>
+                Everything that is around us, is designed for solutions. The goal for every designer is to have
+                influence over all users. The outcome depends on the designer’s work</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
-              <h3 class="title">Social Media Management
-              </h3>
-              <p class="description">With our custom social media marketing service plan, your business can start building brand awareness, as well as generating revenue from all social media platforms
+              <h2 class="title">Social Media Management</h2>
+              <p class="description">With our custom social media marketing service plan, your business can start
+                building brand awareness, as well as generating revenue from all social media platforms
 
               </p>
             </div>
@@ -149,8 +169,10 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-clipboard-data"></i></div>
-              <h3 class="title">SEO</h3>
-              <p class="description">ExaClicks can help increase your bottom line with an SEO campaign that is specifically designed for your unique business. Start earning more qualified search traffic to your website today.</p>
+              <h2 class="title">Local SEO</h2>
+              <p class="description">ExaClicks can help increase your bottom line with an SEO campaign that is
+                specifically designed for your unique business. Start earning more qualified search traffic to your
+                website today.</p>
             </div>
           </div>
         </div>
@@ -164,21 +186,27 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <img src="assets/img/about.webp" class="img-fluid" alt="" height="125" width="500">
+            <img src="assets/img/about.webp" class="img-fluid" alt="SEO Malta" height="125" width="500">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h3>Who are we?</h3>
             <p class="fst-italic">
-              ExaClicks provides all services needed to deliver a web design and development project that is successful. We particularly focus on WordPress Web Design in Malta. We provide web consultancy to inform you of your possibilities, move then on to unite the marketing strategy with the concept of the site and then finalize it by programming, scripting and implementing the website. Our aim is to create web sites for our clients that are consistent with their brand and communicate clear and concise, loyal to it’s brand personality and faithful to it’s tone of voice.
+              ExaClicks provides all services needed to deliver a web design and development project that is successful.
+              We particularly focus on WordPress Web Design in Malta. We provide web consultancy to inform you of your
+              possibilities, move then on to unite the marketing strategy with the concept of the site and then finalize
+              it by programming, scripting and implementing the website. Our aim is to create web sites for our clients
+              that are consistent with their brand and communicate clear and concise, loyal to it’s brand personality
+              and faithful to it’s tone of voice.
 
             </p>
             <ul>
               <li><i class="bi bi-check-circle"></i> Design</li>
               <li><i class="bi bi-check-circle"></i> Quality</li>
-              <li><i class="bi bi-check-circle"></i> Cheap</li>
+              <li><i class="bi bi-check-circle"></i> Not Cheap</li>
             </ul>
             <p>
-              Website Design, WordPress Content Management, e-Commerce, Online Marketing, Development, Emails, Web Hosting, Branding, Logo Design, Domains. One stop shop for all your web needs in Malta.
+              Website Design, WordPress Content Management, e-Commerce, Online Marketing, Development, Emails, Web
+              Hosting, Branding, Logo Design, Domains. One stop shop for all your web needs in Malta.
             </p>
           </div>
         </div>
@@ -193,23 +221,31 @@
         <div class="row counters">
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1" class="purecounter">18</span>
+            <div style="height: 72px; display: flex; align-items: center; justify-content: center;"><img
+                src="assets/img/nums/20.webp" alt="20 Clients" style="" width="52" height="35" />
+            </div>
             <p>Clients</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="27" data-purecounter-duration="1" class="purecounter">27</span>
+            <div style="height: 72px; display: flex; align-items: center; justify-content: center;"><img
+                src="assets/img/nums/22.webp" alt="22 Projects" style="" width="52" height="35" />
+            </div>
             <p>Projects</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="259" data-purecounter-duration="1" class="purecounter">259</span>
-            <p>Hours Of Support</p>
+            <div style="height: 72px; display: flex; align-items: center; justify-content: center;"><img
+                src="assets/img/nums/7.webp" alt="7 Hard Workers" style="" width="25" height="35" />
+            </div>
+            <p>Hard Workers</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter">6</span>
-            <p>Hard Workers</p>
+            <div style="height: 72px; display: flex; align-items: center; justify-content: center;"><img
+                src="assets/img/nums/1757.webp" alt="1757 Cups of Coffee" style="" width="105" height="35" />
+            </div>
+            <p>Cups of Coffee</p>
           </div>
 
         </div>
@@ -230,18 +266,18 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h3>Brand Design & Strategy
-              </h3>
-              <p>Everything that is around us, is designed for solutions. The goal for every designer is to have influence over all users. The outcome depends on the designer’s work</p>
+              <h3>Brand Design & Strategy</h3>
+              <p>Everything that is around us, is designed for solutions. The goal for every designer is to have
+                influence over all users. The outcome depends on the designer’s work</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h3>Social Media Management
-              </h3>
-              <p>With our custom social media marketing service plan, your business can start building brand awareness, as well as generating revenue from all social media platforms
+              <h3>Social Media Management</h3>
+              <p>With our custom social media marketing service plan, your business can start building brand awareness,
+                as well as generating revenue from all social media platforms
 
               </p>
             </div>
@@ -251,7 +287,8 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h3>SEO</h3>
-              <p>ExaClicks can help increase your bottom line with an SEO campaign that is specifically designed for your unique business. Start earning more qualified search traffic to your website today.</p>
+              <p>ExaClicks can help increase your bottom line with an SEO campaign that is specifically designed for
+                your unique business. Start earning more qualified search traffic to your website today.</p>
             </div>
           </div>
 
@@ -259,7 +296,8 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h3>Copywriting</h3>
-              <p>The in-house copywriters and editors at ExaClicks work alongside the marketing team to strategically write branded website copy aimed to both capture your customers and increase search engine rankings
+              <p>The in-house copywriters and editors at ExaClicks work alongside the marketing team to strategically
+                write branded website copy aimed to both capture your customers and increase search engine rankings
 
               </p>
             </div>
@@ -270,7 +308,8 @@
               <div class="icon"><i class="bx bx-slideshow"></i></div>
               <h3>E-mail Marketing
               </h3>
-              <p>Our email marketing management services include content creation and personalization, and we’ll help you choose the campaign package that fits your business needs and goals best.</p>
+              <p>Our email marketing management services include content creation and personalization, and we’ll help
+                you choose the campaign package that fits your business needs and goals best.</p>
             </div>
           </div>
 
@@ -279,7 +318,8 @@
               <div class="icon"><i class="bx bx-arch"></i></div>
               <h3>Website Development
               </h3>
-              <p>We create innovative, effective websites that capture your brand, improve your conversion rates, and maximize your revenue to help grow your business and achieve your goals
+              <p>We create innovative, effective websites that capture your brand, improve your conversion rates, and
+                maximize your revenue to help grow your business and achieve your goals
 
               </p>
             </div>
@@ -290,18 +330,18 @@
       </div>
     </section><!-- End Services Section -->
 
-   
-   
-   
 
-  
+
+
+
+
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
           <span>Contact</span>
-          <h2>Contact</h2>
+          <h3>Contact</h3>
         </div>
 
         <div class="row">
@@ -311,31 +351,29 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Sterling Building Enrico Mizzi Street Ta’ Xbiex, XBX 1453</p>
+                <p style="color:#6A728A;">Sterling Building Enrico Mizzi Street Ta’ Xbiex, XBX 1453</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>contact@exaclicks.com</p>
+                <p style="color:#6A728A;">contact@exaclicks.com</p>
               </div>
 
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+356 99721606
-                </p>
-              </div>
+              <div style="font-size: 27px;font-weight: 700;color:#16df7e;">Feel free to contact us!</div>
             </div>
 
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3231.904697129066!2d14.49020171485663!3d35.90034972553168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x130e4549959d1575%3A0xf997ecb1b37cd856!2sExaClicks%20Ltd!5e0!3m2!1sen!2smt!4v1624364832185!5m2!1sen!2smt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            
-        </div>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3231.904697129066!2d14.49020171485663!3d35.90034972553168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x130e4549959d1575%3A0xf997ecb1b37cd856!2sExaClicks%20Ltd!5e0!3m2!1sen!2smt!4v1624364832185!5m2!1sen!2smt"
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              alt="ExaClicks Address"></iframe>
 
-      </div>
+          </div>
+
+        </div>
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
@@ -348,9 +386,12 @@
       <div class="container">
 
         <div class="social-links">
-          <a href="https://twitter.com/exaclicks" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/EXACLICKS" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="www.instagram.com/exa.clicks" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://twitter.com/exaclicks" aria-label="ExaClicks" class="twitter"><i
+              class="bx bxl-twitter"></i></a>
+          <a href="https://www.facebook.com/EXACLICKS" aria-label="ExaClicks" class="facebook"><i
+              class="bx bxl-facebook"></i></a>
+          <a href="www.instagram.com/exa.clicks" aria-label="ExaClicks" class="instagram"><i
+              class="bx bxl-instagram"></i></a>
         </div>
 
       </div>
@@ -369,7 +410,8 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
 
 
